@@ -1,0 +1,2 @@
+int check_config (void);
+void * read_config (void **);
