@@ -1,0 +1,29 @@
+# "vendor", "product", "policy", "getuid fn"
+#
+# policy :
+# 0 FAILOVER
+# 1 MULTIBUS
+# 2 GROUP_BY_SERIAL
+# 3 GROUP_BY_TUR
+#
+# getuid :
+# 0 EVPD_WWID
+#
+"COMPAQ  ", "HSV110 (C)COMPAQ", "3", "0"
+"COMPAQ  ", "MSA1000         ", "3", "0"
+"COMPAQ  ", "MSA1000 VOLUME  ", "3", "0"
+"DEC     ", "HSG80           ", "3", "0"
+"HP      ", "HSV100          ", "3", "0"
+"HP      ", "A6189A          ", "3", "0"
+"HP      ", "OPEN-           ", "3", "0"
+"DDN     ", "SAN DataDirector", "3", "0"
+"FSC     ", "CentricStor     ", "3", "0"
+"HITACHI ", "DF400           ", "3", "0"
+"HITACHI ", "DF500           ", "3", "0"
+"HITACHI ", "DF600           ", "3", "0"
+"IBM     ", "ProFibre 4000R  ", "3", "0"
+"SGI     ", "TP9100          ", "3", "0"
+"SGI     ", "TP9300          ", "3", "0"
+"SGI     ", "TP9400          ", "3", "0"
+"SGI     ", "TP9500          ", "3", "0"
+
