@@ -1,3 +1,7 @@
+2004-03-13 multipath-tools-0.1.3
+	* multipath config tool now has a config file parser
+	  (did I say I make the ugliest parsers ?)
+	* example multipath.conf to put in /etc (manualy)
 2004-03-12 multipath-tools-0.1.2
 	* detach the per devmap waiter threads
 	* set the thread stack size to lower limits
